name:           midihaskey-utils
version:        0.1.0.0
synopsis:       Some generic utils functions for the MIDIHasKey
description:    Some generic utils functions for the MIDIHasKey
category:       Audio
homepage:       https://github.com/unclechu/midihaskey#readme
bug-reports:    https://github.com/unclechu/midihaskey/issues
author:         Viacheslav Lotsmanov
maintainer:     Viacheslav Lotsmanov <lotsmanov89@gmail.com>
copyright:      Copyright © 2018-2022  Viacheslav Lotsmanov
license:        GPL-3.0-only
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  -- README.md
  -- CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/unclechu/midihaskey

library
  exposed-modules:
      MIDIHasKey.Utils
  hs-source-dirs: src
  ghc-options: -O2
  build-depends:
      base >=4.7 && <5
    , base-unicode-symbols ==0.2.4.2
    , midi
    , qm-interpolated-string
  default-language: Haskell2010
