cabal-version: 2.4
name: midihaskey-utils
version: 0.1.0.0

synopsis: Some generic utils functions for the MIDIHasKey

category: Audio
homepage: https://github.com/unclechu/midihaskey#readme
bug-reports: https://github.com/unclechu/midihaskey/issues
author: Viacheslav Lotsmanov
maintainer: lotsmanov89@gmail.com
copyright: Copyright © 2018-2022  Viacheslav Lotsmanov
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple

extra-source-files:
  -- README.md
  -- CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/unclechu/midihaskey

library
  hs-source-dirs:
    src
  exposed-modules:
    MIDIHasKey.Utils
  build-depends:
    , base >=4.7 && <5
    , base-unicode-symbols >=0.2.4.2
    , midi
    , qm-interpolated-string
  ghc-options:
    -Wall
  default-language:
    Haskell2010
