cabal-version: 2.4
name: midihaskey
version: 0.1.0.0

synopsis: Virtual MIDI keyboard for microtonal music

-- description:
--   Virtual MIDI keyboard for microtonal music.
--   TODO add more description info.

category: Audio
homepage: https://github.com/unclechu/midihaskey#readme
bug-reports: https://github.com/unclechu/midihaskey/issues
author: Viacheslav Lotsmanov
maintainer: lotsmanov89@gmail.com
copyright: Copyright © 2018-2022  Viacheslav Lotsmanov
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple

extra-source-files:
  -- README.md
  -- CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/unclechu/midihaskey

library
  hs-source-dirs:
    src
  exposed-modules:
    EventHandler
    GUI
    GUI.Alerts
    GUI.Types
    GUI.Utils
    HandleKeyboard
    Keys.Helpers
    Keys.Specific.EventHandler
    Keys.Specific.GUI
    Keys.Specific.HandleKeyboard
    Keys.Types
    MIDIHasKey.Config
    MIDIPlayer
    Types
  build-depends:
    , aeson
    , attoparsec
    , base >=4.7 && <5
    , base-unicode-symbols >=0.2.4.2
    , bytestring
    , data-default
    , directory
    , filepath
    , glib
    , gtk3
    , hashable
    , linux-evdev
    , midi
    , midihaskey-utils
    , process
    , qm-interpolated-string
    , scientific
    , singletons
    , singletons-th
    , text
    , transformers
    , unordered-containers
   -- FIXME: Try to fix Orthanc instances and remove the warning suppress flag
  ghc-options:
    -Wall
    -fno-warn-orphans
  default-language:
    Haskell2010

executable midihaskey
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , aeson
    , attoparsec
    , base >=4.7 && <5
    , base-unicode-symbols >=0.2.4.2
    , bytestring
    , data-default
    , directory
    , filepath
    , glib
    , gtk3
    , hashable
    , linux-evdev
    , midi
    , midihaskey
    , midihaskey-utils
    , process
    , qm-interpolated-string
    , scientific
    , singletons
    , text
    , transformers
    , unordered-containers
  ghc-options:
    -Wall
    -threaded
  default-language:
    Haskell2010
