cabal-version: 2.4
name: midiplayer-jack-hs
version: 0.1.0.0

synopsis: A JACK MIDI player for MIDIHasKey

category: Audio
homepage: https://github.com/unclechu/midihaskey#readme
bug-reports: https://github.com/unclechu/midihaskey/issues
author: Viacheslav Lotsmanov
maintainer: lotsmanov89@gmail.com
copyright: Copyright © 2018-2022  Viacheslav Lotsmanov
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple

extra-source-files:
  -- README.md
  -- CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/unclechu/midihaskey

executable midiplayer-jack-hs
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , array
    , base >=4.7 && <5
    , base-unicode-symbols >=0.2.4.2
    , bytestring
    , explicit-exception
    , jack
    , midi
    , midihaskey-utils
    , primitive
    , qm-interpolated-string
  ghc-options:
    -Wall
    -threaded
  default-language:
    Haskell2010
